<resources>
    <string name="app_name">ECP</string>
    <string name="emailReg">Email</string>
    <string name="passwordReg">Password</string>
    <string name="sign_upReg">Sign up</string>
    <string name="sign_inLog">Sign in</string>
    <string name="signin_redirect">Already a member? Sign in!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup_redirect">Don\'t have an account? Register here!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ps_location">PS Location</string>
    <string name="news">News</string>
    <string name="tweets">Tweets</string>
    <string name="settings">Settings</string>
    <string name="google_maps_key">AIzaSyB9y1n3lV7SlFdoLgqm3QqfcxOeV5l7gS8</string>
    <string name="options">Options</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="team">Team</string>
</resources>
