<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context="com.iukhan.ecp.User.RegistrationActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="9dp"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical">


            <ImageView
                android:layout_width="301dp"
                android:layout_height="191dp"

                android:layout_marginTop="18dp"
                android:layout_marginBottom="55dp"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                android:src="@drawable/logo"
                app:srcCompat="@drawable/ecplogo" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="TODO"
                android:src="@drawable/joinus_text" />


            <AutoCompleteTextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/fui_ic_anonymous_white_24dp"
                android:drawablePadding="10dp"
                android:hint="Name"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />


            <AutoCompleteTextView
                android:id="@+id/atvEmailReg"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/icon_mail"
                android:drawablePadding="10dp"
                android:hint="@string/emailReg"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />

            <AutoCompleteTextView
                android:id="@+id/cnic"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@android:drawable/ic_menu_my_calendar"
                android:drawablePadding="10dp"
                android:hint="55555-1234567-8"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />

            <AutoCompleteTextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@android:drawable/stat_sys_speakerphone"
                android:drawablePadding="10dp"
                android:hint="Phone"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />

            <AutoCompleteTextView
                android:id="@+id/atvPasswordReg"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:hint="@string/passwordReg"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="35dp">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Male" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Female" />
                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/btnsignup_gradient"
                android:text="@string/sign_upReg"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/signin_redirect"
                android:textColor="@color/gray" />


        </LinearLayout>


    </ScrollView>

</RelativeLayout>
